<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Retail</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_form">Add Form</string>
    <string name="tambah_input">Tambah Input</string>
    <string name="nama_field">Nama Field</string>
    <string name="jenis_inputan">Jenis Inputan</string>
    <string name="tipe_input">Tipe Input</string>
    <string name="tipe_data">Tipe Data</string>
    <string name="submit">Submit</string>
    <string name="cancle">Cancel</string>
    <string name="field">Field</string>
    <string name="option">Option</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="logo">Logo</string>
    <string name="report_mob">ReportMob</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">-- or --</string>
    <string name="register">Register</string>
    <string name="description">description &#8230;</string>
    
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="icon_list">Icon List</string>
    
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="register_report_mob">Register ReportMob</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="sorry">Sorry...</string>
    <string name="under_construction">[ under construction ]</string>
    <string name="back">Back</string>
    <string name="simpan">Simpan</string>
    <string name="close">Close</string>
    <string name="add_form_field">Add Form Field</string>
    <string name="form_name">Form Name</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="list_form">List Form</string>
    <string name="form_description">Form Description</string>
    <string name="edit">Edit</string>
    <string name="placeholder">Placeholder</string>
    <string name="report">Report</string>
    <string name="username">username</string>
    <string name="sepuluh">10</string>
    <string name="masukkan_opsi">Option items with separator "enter"</string>
    <string name="x_axis">X axis : </string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="value">value</string>
    <string name="loading">loading..</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="add_field">Add Field</string>
    <string name="add_field_instruction">To add new field click add field button</string>
    <string name="field_name">Field Name</string>
    <string name="input_type">Input Type</string>
    <string name="data_type">Data type</string>
    <string name="count">count</string>
    <string name="add_group_desc">Please provide group subject and optional group icon</string>
    <string name="group_name">Group name</string>
    <string name="add_group">Add Group</string>
    
    <string name="next">NEXT</string>
    
    <string name="add_group_participants">ADD GROUP PARTICIPANTS</string>
    
    <string name="invite_by_email">invite by email address</string>
    
    <string name="create_group">Create Group</string>
    
    <string name="required">Required</string>
    
    <string name="sign_required">*</string>
    
    <string name="is_required">(*) is required.</string>

</resources>
