<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/flat_item_icon_large"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/icon_list" />

    <TextView
        android:id="@+id/flat_item_subtitle_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flat_item_icon_large"
        android:layout_alignLeft="@+id/flat_item_title_large"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:text="@string/subtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/flat_item_title_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/flat_item_icon_large"
        android:singleLine="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/flat_item_next_icon_large"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon_list"
        android:scaleType="fitXY"
        android:src="@drawable/ic_next" />

</RelativeLayout>
